kubernetes/expose_ingress_nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx-controller
    app.kubernetes.io/part-of: ingress-nginx-controller
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
  externalIPs:
  - 192.168.2.10
  selector:
    app.kubernetes.io/name: ingress-nginx-controller
    app.kubernetes.io/part-of: ingress-nginx-controller
