kubernetes/ing_reference.yaml
# Source: vid/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dev-vid-vid-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app: vid
    chart: vid-5.0.0
    release: dev-vid
    heritage: Tiller
spec:
  rules:
  - http:
      paths:
        - path: /vid
          backend:
            serviceName: vid-http
            servicePort: 8080
